WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123562
REGRESSION(
r158348
): Breaks Debug build
https://bugs.webkit.org/show_bug.cgi?id=123562
Summary
REGRESSION(r158348): Breaks Debug build
Sudarsana Nagineni (babu)
Reported
2013-10-31 01:42:54 PDT
Compilation fails in debug due to 'comparison of unsigned expression >= 0 is always true'. WebKit/Source/WebCore/Modules/indexeddb/leveldb/IDBBackingStoreLevelDB.cpp: In member function ‘virtual bool WebCore::IDBBackingStoreLevelDB::updateIDBDatabaseVersion(WebCore::IDBBackingStoreInterface::Transaction&, int64_t, uint64_t)’: WebKit/Source/WebCore/Modules/indexeddb/leveldb/IDBBackingStoreLevelDB.cpp:599:25: error: comparison of unsigned expression >= 0 is always true [-Werror=type-limits] The following assert is causing the failure.
>
http://trac.webkit.org/browser/trunk/Source/WebCore/Modules/indexeddb/leveldb/IDBBackingStoreLevelDB.cpp#L599
ASSERT_WITH_MESSAGE(version >= 0, "version was %llu", static_cast<unsigned long long>(version)); the assert can probably just be dropped, since the database versions are uint64_t now.
Attachments
Patch
(1.54 KB, patch)
2013-10-31 01:55 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2013-10-31 01:55:38 PDT
Created
attachment 215632
[details]
Patch
WebKit Commit Bot
Comment 2
2013-10-31 12:15:57 PDT
Comment on
attachment 215632
[details]
Patch Clearing flags on attachment: 215632 Committed
r158383
: <
http://trac.webkit.org/changeset/158383
>
WebKit Commit Bot
Comment 3
2013-10-31 12:15:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug