REGRESSION(r158348): Breaks Debug build https://bugs.webkit.org/show_bug.cgi?id=123562

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2013-10-31
Reviewed by Brady Eidson.

Remove an unnecessary check that cause compilation failure.

No new tests since this just fixes the build failure.

* Modules/indexeddb/leveldb/IDBBackingStoreLevelDB.cpp:
(WebCore::IDBBackingStoreLevelDB::updateIDBDatabaseVersion):

Canonical link: https://commits.webkit.org/141748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158383 268f45cc-cd09-0410-ab3c-d52691b4dbfc